// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TournamentStateTag matches snapshot for COMPLETED state 1`] = `
<View
  style={
    {
      "borderColor": "#FEDD84",
      "borderWidth": 1.3,
      "justifyContent": "center",
      "paddingHorizontal": 2,
    }
  }
>
  <Text
    style={
      {
        "color": "#FEDD84",
        "fontFamily": "AgencyFB-Bold",
        "fontSize": 12,
        "lineHeight": 10,
        "textTransform": "uppercase",
      }
    }
  >
    COMPLETED
  </Text>
</View>
`;

exports[`TournamentStateTag matches snapshot for ONGOING state 1`] = `
<View
  style={
    {
      "borderColor": "#FEDD84",
      "borderWidth": 1.3,
      "justifyContent": "center",
      "paddingHorizontal": 2,
    }
  }
>
  <Text
    style={
      {
        "color": "#FEDD84",
        "fontFamily": "AgencyFB-Bold",
        "fontSize": 12,
        "lineHeight": 10,
        "textTransform": "uppercase",
      }
    }
  >
    ONGOING
  </Text>
</View>
`;

exports[`TournamentStateTag matches snapshot for UPCOMING state 1`] = `
<View
  style={
    {
      "borderColor": "#CACEFF",
      "borderWidth": 1.3,
      "justifyContent": "center",
      "paddingHorizontal": 2,
    }
  }
>
  <Text
    style={
      {
        "color": "#CACEFF",
        "fontFamily": "AgencyFB-Bold",
        "fontSize": 12,
        "lineHeight": 10,
        "textTransform": "uppercase",
      }
    }
  >
    UPCOMING
  </Text>
</View>
`;

exports[`TournamentStateTag matches snapshot when pressed 1`] = `
<View
  style={
    {
      "borderColor": "black",
      "borderWidth": 1.3,
      "justifyContent": "center",
      "paddingHorizontal": 2,
    }
  }
>
  <Text
    style={
      {
        "color": "black",
        "fontFamily": "AgencyFB-Bold",
        "fontSize": 12,
        "lineHeight": 10,
        "textTransform": "uppercase",
      }
    }
  >
    ONGOING
  </Text>
</View>
`;
